# Graduation-thesis

./: CMakeLists.txt  README.md
datasets/: 40_tasks.txt  40_tasks_check.txt  40_tasks_res.txt  my_tasks.txt
include/: ant_colony_algorithm.hpp  core.hpp  utils.h
include/genetic/: Genetic.h  crossovers.hpp  ending_conditions.hpp  genetic_algorithm.hpp  genetic_menu.hpp  includes.h  mutations.hpp  reproductive_strategies.hpp  selection_strategies.hpp  start_forming_algorithms.hpp
src/: correctness_check.cpp  evo.cpp  single_run.cpp  tournament_test.cpp
